# realtime

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  pytest.ini
docker/: Dockerfile
requirements/: base.txt
src/app/: api.py  database.py  event.py  exceptions.py  main.py  middlewares.py  redis.py
src/app/schemas/: token.py
src/app/settings/: __init__.py  base.py  database.py  general.py  rabbit.py  redis.py  websocket.py
src/app/utils/: utils.py
src/app/websocket/: deps.py
src/app/websocket/constants/: __init__.py  presence.py  socket.py
src/app/websocket/contexts/: __init__.py  api.py  queue.py
src/app/websocket/events/: communication.py
src/app/websocket/routes/: websocket.py
src/app/websocket/schemas/: message.py
src/app/websocket/services/: presence.py  websocket.py
src/app/websocket/socket/: __init__.py
src/app/websocket/socket/handlers/: base.py  connect.py  disconnect.py  ping.py  presence_sub.py  user_typing.py
src/app/websocket/socket/notifiers/: __init__.py  base.py  noop.py  socket.py
src/app/websocket/socket/publishers/: __init__.py  base.py  channel_member_joined.py  message.py  presence_changed.py  user_profile_changed.py
src/app/websocket/socket/stores/: __init__.py  base.py  keys.py  noop.py  redis.py
src/tests/websocket/: conftest.py  test_queues.py
